--- a/.github/workflows/aws-autodeploy.yml
+++ b/.github/workflows/aws-autodeploy.yml
@@ -1,94 +1,150 @@
-# This workflow will build and push a new container image to Amazon ECR,
-# and then will deploy a new task definition to Amazon ECS, when there is a push to the "main" branch.
+# Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# SPDX-License-Identifier: MIT-0
 #
-# To use this workflow, you will need to complete the following set-up steps:
+# Permission is hereby granted, free of charge, to any person obtaining a copy of this
+# software and associated documentation files (the "Software"), to deal in the Software
+# without restriction, including without limitation the rights to use, copy, modify,
+# merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
+# permit persons to whom the Software is furnished to do so.
 #
-# 1. Create an ECR repository to store your images.
-#    For example: `aws ecr create-repository --repository-name my-ecr-repo --region us-east-2`.
-#    Replace the value of the `ECR_REPOSITORY` environment variable in the workflow below with your repository's name.
-#    Replace the value of the `AWS_REGION` environment variable in the workflow below with your repository's region.
-#
-# 2. Create an ECS task definition, an ECS cluster, and an ECS service.
-#    For example, follow the Getting Started guide on the ECS console:
-#      https://us-east-2.console.aws.amazon.com/ecs/home?region=us-east-2#/firstRun
-#    Replace the value of the `ECS_SERVICE` environment variable in the workflow below with the name you set for the Amazon ECS service.
-#    Replace the value of the `ECS_CLUSTER` environment variable in the workflow below with the name you set for the cluster.
-#
-# 3. Store your ECS task definition as a JSON file in your repository.
-#    The format should follow the output of `aws ecs register-task-definition --generate-cli-skeleton`.
-#    Replace the value of the `ECS_TASK_DEFINITION` environment variable in the workflow below with the path to the JSON file.
-#    Replace the value of the `CONTAINER_NAME` environment variable in the workflow below with the name of the container
-#    in the `containerDefinitions` section of the task definition.
-#
-# 4. Store an IAM user access key in GitHub Actions secrets named `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
-#    See the documentation for each action used below for the recommended IAM policies for this IAM user,
-#    and best practices on handling the access key credentials.
-
-name: Deploy to Amazon ECS
-
-on:
-  push:
-    branches: [ "main" ]
-
-env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
-
-permissions:
-  contents: read
-
-jobs:
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    environment: production
-
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+# INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
+# PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+# HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+name: Docker Community Edition
+description: Installs Docker Community Edition from the Docker package repository, and enables the ubuntu user to manage Docker without using sudo. For more information, review the installation guide at https://docs.docker.com/install/linux/docker-ce/ubuntu/.
+schemaVersion: 1.0
+phases:
+  - name: build
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: OperatingSystemArchitecture
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              ARCH=$(uname -m)
+              case $ARCH in
+                  'x86_64')
+                      echo 'amd64'
+                      ;;
+                  'aarch64')
+                      echo 'arm64'
+                      ;;
+                  *)
+                      echo "The '$ARCH' architecture is not supported. Failing build."
+                      exit 1
+                      ;;
+              esac
+      - name: InstallHttpsPrerequisites
+        action: ExecuteBash
+        inputs:
+          commands:
+            - sudo apt-get update
+            - sudo apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common
+      - name: InstallDockerGPGKey
+        action: ExecuteBash
+        inputs:
+          commands:
+            - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      - name: InstallDockerRepository
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              ARCH='{{build.OperatingSystemArchitecture.outputs.stdout}}'
+              LSB_RELEASE=$(lsb_release -cs)
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-1
+              SOURCE="deb [arch=$ARCH] https://download.docker.com/linux/ubuntu $LSB_RELEASE stable"
+              SOURCE_REGEX="deb \[arch=$ARCH\] https:\/\/download\.docker\.com\/linux\/ubuntu $LSB_RELEASE stable"
+              SOURCE_FILE=/etc/apt/sources.list
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+              cat $SOURCE_FILE | grep "^$SOURCE_REGEX"
+              if [[ $? == 0 ]]; then
+                echo "The repository already exists in the '$SOURCE_FILE' file, skipping repository installation."
+              else
+                echo "The repository does not exist in the '$SOURCE_FILE' file, installing repository..."
+                sudo add-apt-repository "$SOURCE"
+                echo 'The repository has been installed.'
+              fi
+      - name: InstallDockerCE
+        action: ExecuteBash
+        inputs:
+          commands:
+            - sudo apt-get update
+            - sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+            - sudo systemctl start docker
+            - sudo systemctl enable docker
+            - sudo usermod -a -G docker ubuntu
+      - name: RebootToEnablePermissions
+        action: Reboot
+      - name: WaitDockerServiceStartupPostReboot
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              STATUS=fail
 
-    - name: Build, tag, and push image to Amazon ECR
-      id: build-image
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+              # Total sleep time ~180 seconds for service startup.
+              echo 'Waiting for the Docker service to start...'
+              for i in {0..35}
+              do
+                  CUR_STATE=$(systemctl is-active docker)
+                  if [[ $CUR_STATE == "active" ]]; then
+                      echo "Docker service is active."
+                      STATUS=success
+                      break
+                  else
+                      echo "Docker service is not yet active. State '$CUR_STATE'. Sleeping 5 seconds..."
+                      sleep 5
+                  fi
+              done
 
-    - name: Fill in the new image ID in the Amazon ECS task definition
-      id: task-def
-      uses: aws-actions/amazon-ecs-render-task-definition@v1
-      with:
-        task-definition: ${{ env.ECS_TASK_DEFINITION }}
-        container-name: ${{ env.CONTAINER_NAME }}
-        image: ${{ steps.build-image.outputs.image }}
+              if [[ $STATUS == "fail" ]]; then
+                  echo "Docker service failed to start within timeout period. Failing."
+                  exit 1
+              fi
 
-    - name: Deploy Amazon ECS task definition
-      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
-        cluster: ${{ env.ECS_CLUSTER }}
-        wait-for-service-stability: true
+  - name: validate
+    steps:
+      # Do not loop here to allow a fast fail if validate phase is executed separately
+      - name: ValidateDockerService
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              CUR_STATE=$(systemctl is-active docker)
+              if [[ $CUR_STATE == "active" ]]; then
+                  echo "Docker service is active."
+                  exit 0
+              else
+                  echo "Docker service is not active. State '$CUR_STATE'. Failing."
+                  exit 1
+              fi
+      - name: ValidateDockerCommandExists
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              if type -P docker &>/dev/null; then
+                  echo "Docker command exists."
+                  exit 0
+              else
+                  echo "Docker command does not exist. Failing."
+                  exit 1
+              fi
+      - name: ValidateDockerGroupMembership
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              USER='ubuntu'
+              GROUP='docker'
+              if groups $USER | grep &>/dev/null "$GROUP"; then
+                  echo "The '$USER' is a member of the '$GROUP' group."
+                  exit 0
+              else
+                  echo "The '$USER' is not a member of the '$GROUP' group. Failing."
+                  exit 1
+              fi
